# tinycat

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  clean.sh  installBuildDependencies.sh  readme.md
include/: cleanup.h  cli.h  client.h  config.h  fdio.h  ip.h  loop.h  network.h  server.h  unix.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  cleanup.c  cli.c  client.c  fdio.c  ip.c  loop.c  main.c  network.c  server.c  unix.c
